# pymodoro

./: .gitignore  README.md  ROADMAP.md  build.sh  pymodoro.desktop  pymodoro.spec  pyproject.toml  requirements.txt  run.py
pymodoro/: app.py  main.py
pymodoro/audio/: manager.py  tones.py
pymodoro/config/: manager.py  models.py  provider.py
pymodoro/gui/: main_window.py  overlay.py  settings.py  styles.py  tray.py
pymodoro/input/: __init__.py  hotkeys.py  monitor.py
pymodoro/timer/: controller.py  core.py  states.py
pymodoro/utils/: __init__.py  logger.py
