[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymodoro"
version = "0.1.0"
description = "A Linux-native Pomodoro timer with system tray integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6.0",
    "pynput>=1.7.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "plyer>=2.1.0",
]

[project.scripts]
pymodoro = "pymodoro.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymodoro*"] 